# AtomSkills2024

./: .dockerignore  .gitignore  backend.sln  cabal.project  docker-compose.yml  hie.yaml  readme.md
backend/: Dockerfile  Program.cs  appsettings.Development.json  backend.csproj
backend.Application/Services/: SomeFilesService.cs  SomethingsService.cs  UsersService.cs
backend.Core/Abstractions/: ISomeFilesRepository.cs  ISomeFilesService.cs  ISomethingsRepository.cs  ISomethingsService.cs  IUsersRepository.cs  IUsersService.cs
backend.Core/models/: SomeFile.cs  Something.cs  User.cs
backend.DataAccess/: BackendDbContext.cs
backend.DataAccess/Configurations/: SomeFileConfiguration.cs  UserConfiguration.cs
backend.DataAccess/Entities/: SomeFileRecord.cs  SomethingRecord.cs
backend.DataAccess/Migrations/: 20240527100914_init.Designer.cs  20240527100914_init.cs  BackendDbContextModelSnapshot.cs
backend.DataAccess/Repositories/: SomeFilesRepository.cs  SomethingsRepository.cs  UsersRepository.cs
backend/Contracts/: CreateSomethingRequest.cs  SingUpRequest.cs
backend/Controllers/: SomethingController.cs  UserController.cs
docs/: deploy.md  toolbox.md  Инструкция по развертыванию.docx  Исходный код.docx  ПРБ_Общая часть КЗ 2024.docx  Пользовательская инструкция.docx  Презентация продукта.pptx  Презентация.pptx  Техническая документация.docx
docs/Описание API/: api.md  (+1 more)
frontend/: .editorconfig  .env  check-node-version.js  dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
https/: certificate.key  certificate.pem  certificate.pfx
lessons/: topic copy.json
ml/: api.py  dockerfile
src/hackend/: CHANGELOG.md  LICENSE  hackend.cabal
src/hackend/app/: Load.hs  Main.hs
src/hackend/app/Core/: Types.hs
(+349 files in other folders)
