cabal-version:      3.4
name:               hackend
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Dmitry Tyurnikov
maintainer:         DimsFromDergachy@outlook.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: ./app/Core/Types.hs,
                    ./app/Load.hs
data-files:         ./lessons/traits.json

common warnings
    ghc-options: -Wall

executable hackend
    import:           warnings
    main-is:          Main.hs
    other-modules:    Core.Types,
                      Load
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0,
                      scotty ^>=0.22,
                      directory ^>=1.3.8.5,
                      aeson ^>=2.2.3.0,
                      bytestring ^>=0.12.0.2,
                      filepath ^>=1.5.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
